HAAR 2924 order case notes most recent first (#379)